# IRTansh

./: CMakeLists.txt  IRTrans.ui  IRTransPlugin.cpp  IRTransPlugin.h  IRTransPlugin_Dev.pro  IRTransPlugin_Win.pro  README.md
